--- a/contacto.html
+++ b/contacto.html
@@ -47,7 +47,7 @@
                     <input type="search" name="buscador" placeholder="Buscar..." id="buscadormenu" />
                     <nav id="opcionescontenido">
                         <ul id="menu-secciones">
-                            <li><a href="museorezadri.html">INICIO</a></li>
+                            <li><a href="index.html">INICIO</a></li>
                             <li><span id="colecciones">COLECCION </span></li>
                             <li><a href="./visita.html">VISITA</a></li>
                             <li><a href="./tienda.html">TIENDA</a></li>
@@ -67,12 +67,12 @@
 
 
             </div>
-            <h1 class="nombremuseo"><a href="./museorezadri.html">Museo <strong>Rezadri</strong></a></h1>
+            <h1 class="nombremuseo"><a href="./index.html">Museo <strong>Rezadri</strong></a></h1>
 
 
             <nav id="secciondesplegado">
                 <ul id="opciondesplegado">
-                    <li><a href="museorezadri.html">INICIO</a></li>
+                    <li><a href="index.html">INICIO</a></li>
                     <li id="colecciondesplegado">
                         <span >COLECCIÓN</span>
                         <span  id="coleccionspan" class="hijoscoleccion"><a href="./cuadros.html">CUADROS</a></span>
@@ -238,7 +238,7 @@
 
         <div id="contacto">
             <nav id="enlacecontacto">
-                <p><a href="museorezadri.html">Inicio</a> &#x25B6; <small>Contacto</small></p>
+                <p><a href="index.html">Inicio</a> &#x25B6; <small>Contacto</small></p>
             </nav>
             <section id="contenidocontacto">
                 <h2>CONTACTO</h2>
