--- a/museo.html
+++ b/museo.html
@@ -45,7 +45,7 @@
                     <input type="search" name="buscador" placeholder="Buscar..." id="buscadormenu" />
                     <nav id="opcionescontenido">
                         <ul id="menu-secciones">
-                            <li><a href="museorezadri.html">INICIO</a></li>
+                            <li><a href="index.html">INICIO</a></li>
                             <li><span id="colecciones">COLECCION </span></li>
                             <li><a href="./visita.html">VISITA</a></li>
                             <li><a href="./tienda.html">TIENDA</a></li>
@@ -65,12 +65,12 @@
 
 
             </div>
-            <h1 class="nombremuseo"><a href="./museorezadri.html">Museo <strong>Rezadri</strong></a></h1>
+            <h1 class="nombremuseo"><a href="./index.html">Museo <strong>Rezadri</strong></a></h1>
 
 
             <nav id="secciondesplegado">
                 <ul id="opciondesplegado">
-                    <li><a href="museorezadri.html">INICIO</a></li>
+                    <li><a href="index.html">INICIO</a></li>
                     <li id="colecciondesplegado">
                         <span >COLECCIÓN</span>
                         <span  id="coleccionspan" class="hijoscoleccion"><a href="./cuadros.html">CUADROS</a></span>
@@ -235,7 +235,7 @@
     <main>
 
         <nav id="enlacevisita">
-            <p><a href="museorezadri.html">Inicio</a> &#x25B6; <small>Museo</small></p>
+            <p><a href="index.html">Inicio</a> &#x25B6; <small>Museo</small></p>
         </nav>
 
         <picture>
